--- a/client/main.html
+++ b/client/main.html
@@ -2,10 +2,14 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Hash Cash</title>
+
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous" />
 </head>
 
 <body>
-  <app></app>
+  <div id='app'></div>
+
+  <script src="https://www.paypalobjects.com/api/checkout.js" data-version-4></script>
 </body>
